# Generic-avr.cmake

./: Generic-avr.cmake  LICENSE  README.md
example/: CMakeLists.txt  blink.c
